Add image processing feature for medical images
- Add camera and gallery image picker to ChatInput
- Implement image upload to Supabase Storage
- Display images inline in chat messages
- Add pending image preview before sending
- Create storage service with upload/delete functions
- Add Supabase Storage bucket setup SQL script
- Add vision AI placeholder for future GPT-4 Vision integration
- Add i18n translations for image features (EN/FR)
- Add permissions handling for camera and media library
- Update AssistantContext to support imageUrl
- Add comprehensive IMAGE_PROCESSING.md documentation

Dependencies added:
- expo-file-system
- base64-arraybuffer

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -116,6 +116,12 @@
     }
   },
   "attachments": {
+    "selectSource": "Select Image Source",
+    "camera": "Take Photo",
+    "gallery": "Choose from Gallery",
+    "pendingImage": "Image to send:",
+    "removeTitle": "Remove Image",
+    "removeMessage": "Are you sure you want to remove this image?",
     "selectTag": "Select Tag",
     "tags": {
       "skin": "Skin",
@@ -128,5 +134,19 @@
     "filterICD10": "Filter ICD-10 for {{category}}",
     "noAttachments": "No attachments",
     "removeAttachment": "Remove attachment"
+  },
+  "permissions": {
+    "cameraTitle": "Camera Permission Required",
+    "cameraMessage": "Please allow camera access to take photos",
+    "mediaLibraryTitle": "Photo Library Permission Required",
+    "mediaLibraryMessage": "Please allow photo library access to select images"
+  },
+  "errors": {
+    "imagePickerTitle": "Image Selection Error",
+    "imagePickerMessage": "Failed to select image. Please try again.",
+    "cameraTitle": "Camera Error",
+    "cameraMessage": "Failed to take photo. Please try again.",
+    "imageUploadTitle": "Upload Error",
+    "imageUploadMessage": "Failed to upload image. Please try again."
   }
 }
