Add professional healthcare Dashboard and unified theme system
UI/UX Improvements:
- Create professional Dashboard home screen with stats and quick actions
- Design healthcare-focused color palette (blues, greens, medical theme)
- Add unified theme system (colors, spacing, typography, shadows)
- Update navigation to make Dashboard the first tab
- Apply consistent styling to AssistantScreen

Dashboard Features:
- Personalized greeting (Good Morning/Afternoon/Evening)
- Today's overview with stat cards (active codes, encounters, favorites, patients)
- Quick action cards for main features (Search, AI Assistant, Patients, Visit)
- Current visit summary with code count
- Helpful tip card for user guidance
- Professional card-based layout with shadows

Theme System:
- Healthcare-focused color palette (primary blue, secondary green, accent purple)
- Semantic colors for alerts, status, and clinical risk levels
- Standardized spacing, border radius, and typography scales
- Reusable shadow definitions
- Accessibility-focused text colors

Navigation Updates:
- Dashboard as home screen (first tab)
- Streamlined 5-tab layout: Dashboard, Search, Assistant, Patients, Visit
- Updated tab bar styling with better spacing
- Professional icons and labels

Mobile Optimized:
- Responsive card layouts
- Touch-friendly button sizes
- Proper spacing for mobile screens
- ScrollView for content overflow

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -14,6 +14,29 @@
     "confirm": "Confirm",
     "back": "Back"
   },
+  "dashboard": {
+    "goodMorning": "Good Morning",
+    "goodAfternoon": "Good Afternoon",
+    "goodEvening": "Good Evening",
+    "todayOverview": "Today's Overview",
+    "quickActions": "Quick Actions",
+    "searchCodes": "Search ICD-10 Codes",
+    "searchCodesDesc": "Find diagnosis codes quickly",
+    "aiAssistant": "AI Documentation Assistant",
+    "aiAssistantDesc": "Get coding suggestions",
+    "patients": "Patient Management",
+    "patientsDesc": "View and manage patients",
+    "currentVisit": "Current Visit Note",
+    "codesAdded": "codes added",
+    "activeCodes": "Active Codes",
+    "encounters": "Encounters",
+    "favorites": "Favorites",
+    "currentVisitSummary": "Current Visit",
+    "viewAll": "View All",
+    "diagnosisCodes": "diagnosis codes",
+    "readyToDocument": "Ready to document",
+    "tipMessage": "Tip: Use the AI Assistant for quick code suggestions based on clinical notes"
+  },
   "auth": {
     "login": "Sign In",
     "register": "Sign Up",
