--- a/src/i18n/locales/fr.json
+++ b/src/i18n/locales/fr.json
@@ -14,6 +14,29 @@
     "confirm": "Confirmer",
     "back": "Retour"
   },
+  "dashboard": {
+    "goodMorning": "Bonjour",
+    "goodAfternoon": "Bon après-midi",
+    "goodEvening": "Bonsoir",
+    "todayOverview": "Aperçu d'aujourd'hui",
+    "quickActions": "Actions rapides",
+    "searchCodes": "Rechercher codes CIM-10",
+    "searchCodesDesc": "Trouver rapidement des codes",
+    "aiAssistant": "Assistant IA",
+    "aiAssistantDesc": "Suggestions de codage",
+    "patients": "Gestion des patients",
+    "patientsDesc": "Voir et gérer les patients",
+    "currentVisit": "Visite actuelle",
+    "codesAdded": "codes ajoutés",
+    "activeCodes": "Codes actifs",
+    "encounters": "Rencontres",
+    "favorites": "Favoris",
+    "currentVisitSummary": "Visite actuelle",
+    "viewAll": "Voir tout",
+    "diagnosisCodes": "codes de diagnostic",
+    "readyToDocument": "Prêt à documenter",
+    "tipMessage": "Astuce: Utilisez l'assistant IA pour des suggestions rapides"
+  },
   "auth": {
     "login": "Se connecter",
     "register": "S'inscrire",
